# linear_regression

./: README.md  REASME.md  pyproject.toml  regression.ipynb
