[tool.poetry]
name = "linear-regression"
version = "0.1.0"
description = ""
authors = ["bashar adel taamneh <bashartaamneh55@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.2.1"
pandas = "^1.3.4"
sklearn = "^0.0"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
